fix - Fixing a projectCard img styling on mobile

--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -74,10 +74,6 @@
   display: block;
 }
 
-.project-card__img {
-  border-radius: var(--border-radius-s);
-}
-
 .project__details-tools {
   display: flex;
   flex-direction: column;
