--- a/src/components/projectCard/style.css
+++ b/src/components/projectCard/style.css
@@ -178,7 +178,7 @@
   }
 
   .project-card__img {
-    width: 290px;
+    width: 100%;
     height: 255px;
   }
 }
